--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <aside class="hero">
             <div class="welcome">
-                <h1 class="welcome__txt">Bienvenue dans ma boutique de peintures, scultptures, bijoux, babioles et
+                <h1 class="welcome__txt">Bienvenue dans ma boutique de peintures, sculptures, bijoux, babioles et
                     autres
                     curiosités</h1>
             </div>
@@ -38,7 +38,7 @@
                 <img src="./src/assets/images/terry.jpg">
             </figure>
             <div class="apropos__content">
-                <h2>À propos</h2>
+                <h2>À PROPOS</h2>
                 <p>Terry O'Meher ? Le Dormeur du Vol ? L'homme aux multiples patronymes vous accueil dans l'antre de ses
                     mutiples talents. Auteur, peintre, poète, photographe mais aussi sculpteur et bricoleur à ses heures
                     perdues. Découvrez, explorez, laissez-vous surprendre par son univers tentaculaire, touchant et
