Added gallery's anchor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="nav">
             <ul class="nav__ul">
                 <li class="nav__ul__li"><a href="#apropos">À propos</a></li>
-                <li class="nav__ul__li"><a>Gallerie</a></li>
+                <li class="nav__ul__li"><a href="#gallery">Gallerie</a></li>
                 <li class="nav__ul__li"><a>Contact</a></li>
                 <li class="nav__ul__li"><a>Liens</a></li>
             </ul>
@@ -47,7 +47,7 @@
             </div>
         </article>
         <aside class="gallery-layout">
-            <h2>Mes créations</h2>
+            <h2 id="gallery">Mes créations</h2>
             <div class="filters">
                 <button id="btn-all" class="filter filter--active" name="filterAll" type="button">Tout</button>
                 <button id="btn-bracelets" class="filter" name="filterBracelets" type="button">Bracelets</button>
