--- a/index.html
+++ b/index.html
@@ -71,6 +71,45 @@
             </dialog>
             <div class="gallery"></div>
         </aside>
+        <aside class="contact">
+            <h2 class="contact__title">Me contacter :</h2>
+            <div class="contact__content">
+                <div class="info-contact">
+                    <h3 class="info-contact__title">Informations :</h3>
+                    <p>Vous pouvez me contacter pour toutes informations concernant mes créations ou pour acheter l'une
+                        de celles qui sont en vente dans la boutique.</p>
+                    <p>Pour toute commande il faut ajouter 5€ de frais de ports et d'emballage</p>
+                </div>
+                <div class="form-contact">
+                    <h3>Formulaire :</h3>
+                    <form class="form-contact__form" action="mailto:yoh.nbc@hotmail.fr" method="post"
+                        enctype="text/plain">
+                        <label class="form-contact__form__label" for="name">
+                            Qui êtes-vous ?
+                            <input type="text" name="name">
+                        </label>
+                        <label class="form-contact__form__label" for="object">
+                            Que souhaitez-vous ?
+                            <select name="object">
+                                <option value="">Veuillez séléctionez un sujet</option>
+                                <option value="Question">Une demande d'informations</option>
+                                <option value="Achat">Acheter un article</option>
+                                <option value="Autre">Autre</option>
+                            </select>
+                        </label>
+                        <label class="form-contact__form__label" for="details">
+                            Donnez-moi tous les détails !
+                            <input type="text" name="details">
+                        </label>
+                        <label class="form-contact__form__label" for="contact">
+                            Comment puis-je vous recontacter ?
+                            <input type="text" name="contact">
+                        </label>
+                        <input type="submit" value="Envoyer">
+                    </form>
+                </div>
+            </div>
+        </aside>
     </main>
     <footer class="footer">
         <div></div>
