Added footer's content

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <div class="liens-contact">
                     <h3>Coordonnées</h3>
                     <ul class="liens-contact__ul">
-                        <li class="liens-contact__ul__li">Mail : terryomeher@gmail.com</li>
+                        <li class="liens-contact__ul__li">Email : terryomeher@gmail.com</li>
                         <li class="liens-contact__ul__li">Téléphone : ?</li>
                     </ul>
                     <h3>Liens de contact</h3>
@@ -111,7 +111,30 @@
         </aside>
     </main>
     <footer class="footer">
-        <div class="footer__content"></div>
+        <div class="footer__content">
+            <div class="social-networks-links">
+                <a href="https://www.facebook.com/TerryOmeher/">Facebook (page auteur)</a>
+                <a href="https://twitter.com/LeDormeurDuVol">Twitter</a>
+                <a href="https://www.instagram.com/ledormeurduvol/">Instagram</a>
+                <a href="https://ask.fm/LeDormeurDuVol">Ask</a>
+                <a href="https://www.youtube.com/LeDormeurDuVol">Youtube</a>
+                <a href="https://www.tumblr.com/ledormeurduvol"></a>
+            </div>
+            <div class="creations-links">
+                <a href="https://www.artblr.com/ledormeurduvol/fr">Artblr</a>
+                <a href="https://www.deviantart.com/ledormeurduvol">DeviantArt</a>
+                <a href="https://www.flickr.com/photos/ledormeurduvol">Flickr</a>
+                <a href="https://www.pinterest.fr/lduvol/">Pinterest</a>
+                <a href="https://www.facebook.com/notes/362451938533046/">Liste de mes Poêmes</a>
+                <a href="https://www.facebook.com/notes/379841119877951/">Mes autres Textes</a>
+            </div>
+            <div class="merch-links">
+                <a href="https://www.patreon.com/terryomeher">Patreon</a>
+                <a href="https://www.redbubble.com/fr/people/ledormeurduvol/shop">Redbubble (boutique)</a>
+                <a href="https://fr.tipeee.com/la-petite-boutique-des-bonheurs-retrouves">Tipee (Terry O'Meher)</a>
+                <a href="https://fr.tipeee.com/ledormeurduvol">Tipee (Le Dormeur Du Vol)</a>
+            </div>
+        </div>
         <a class="footer__link-icon-up" href="#up"><img class="footer__icon-up"
                 src="./public/icon-double-up-white.png">Retour au haut de page</a>
     </footer>
