Added buy button

--- a/index.html
+++ b/index.html
@@ -113,26 +113,28 @@
     <footer class="footer">
         <div class="footer__content">
             <div class="social-networks-links">
-                <a href="https://www.facebook.com/TerryOmeher/">Facebook (page auteur)</a>
-                <a href="https://twitter.com/LeDormeurDuVol">Twitter</a>
-                <a href="https://www.instagram.com/ledormeurduvol/">Instagram</a>
-                <a href="https://ask.fm/LeDormeurDuVol">Ask</a>
-                <a href="https://www.youtube.com/LeDormeurDuVol">Youtube</a>
-                <a href="https://www.tumblr.com/ledormeurduvol"></a>
+                <a href="https://www.facebook.com/TerryOmeher/" target="_blank">Facebook (page auteur)</a>
+                <a href="https://twitter.com/LeDormeurDuVol" target="_blank">Twitter</a>
+                <a href="https://www.instagram.com/ledormeurduvol/" target="_blank">Instagram</a>
+                <a href="https://ask.fm/LeDormeurDuVol" target="_blank">Ask</a>
+                <a href="https://www.youtube.com/LeDormeurDuVol" target="_blank">Youtube</a>
+                <a href="https://www.tumblr.com/ledormeurduvol" target="_blank"></a>
             </div>
             <div class="creations-links">
-                <a href="https://www.artblr.com/ledormeurduvol/fr">Artblr</a>
-                <a href="https://www.deviantart.com/ledormeurduvol">DeviantArt</a>
-                <a href="https://www.flickr.com/photos/ledormeurduvol">Flickr</a>
-                <a href="https://www.pinterest.fr/lduvol/">Pinterest</a>
-                <a href="https://www.facebook.com/notes/362451938533046/">Liste de mes Poêmes</a>
-                <a href="https://www.facebook.com/notes/379841119877951/">Mes autres Textes</a>
+                <a href="https://www.artblr.com/ledormeurduvol/fr" target="_blank">Artblr</a>
+                <a href="https://www.deviantart.com/ledormeurduvol" target="_blank">DeviantArt</a>
+                <a href="https://www.flickr.com/photos/ledormeurduvol" target="_blank">Flickr</a>
+                <a href="https://www.pinterest.fr/lduvol/" target="_blank">Pinterest</a>
+                <a href="https://www.facebook.com/notes/362451938533046/" target="_blank">Liste de mes Poêmes</a>
+                <a href="https://www.facebook.com/notes/379841119877951/" target="_blank">Mes autres Textes</a>
             </div>
             <div class="merch-links">
-                <a href="https://www.patreon.com/terryomeher">Patreon</a>
-                <a href="https://www.redbubble.com/fr/people/ledormeurduvol/shop">Redbubble (boutique)</a>
-                <a href="https://fr.tipeee.com/la-petite-boutique-des-bonheurs-retrouves">Tipee (Terry O'Meher)</a>
-                <a href="https://fr.tipeee.com/ledormeurduvol">Tipee (Le Dormeur Du Vol)</a>
+                <a href="https://www.patreon.com/terryomeher" target="_blank">Patreon</a>
+                <a href="https://www.redbubble.com/fr/people/ledormeurduvol/shop" target="_blank">Redbubble
+                    (boutique)</a>
+                <a href="https://fr.tipeee.com/la-petite-boutique-des-bonheurs-retrouves" target="_blank">Tipee (Terry
+                    O'Meher)</a>
+                <a href="https://fr.tipeee.com/ledormeurduvol" target="_blank">Tipee (Le Dormeur Du Vol)</a>
             </div>
         </div>
         <a class="footer__link-icon-up" href="#up"><img class="footer__icon-up"
