--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <footer class="footer">
         <div class="footer__content">
             <div class="social-networks-links">
+                <p class="social-networks-links__title">Suivez moi sur les réseaux :</p>
                 <a href="https://www.facebook.com/TerryOmeher/" target="_blank">Facebook (page auteur)</a>
                 <a href="https://twitter.com/LeDormeurDuVol" target="_blank">Twitter</a>
                 <a href="https://www.instagram.com/ledormeurduvol/" target="_blank">Instagram</a>
@@ -121,6 +122,7 @@
                 <a href="https://www.tumblr.com/ledormeurduvol" target="_blank"></a>
             </div>
             <div class="creations-links">
+                <p class="creations-links__title">Découvrez mes autres créations :</p>
                 <a href="https://www.artblr.com/ledormeurduvol/fr" target="_blank">Artblr</a>
                 <a href="https://www.deviantart.com/ledormeurduvol" target="_blank">DeviantArt</a>
                 <a href="https://www.flickr.com/photos/ledormeurduvol" target="_blank">Flickr</a>
@@ -129,6 +131,7 @@
                 <a href="https://www.facebook.com/notes/379841119877951/" target="_blank">Mes autres Textes</a>
             </div>
             <div class="merch-links">
+                <p class="merch-links__title">Pour me soutenir :</p>
                 <a href="https://www.patreon.com/terryomeher" target="_blank">Patreon</a>
                 <a href="https://www.redbubble.com/fr/people/ledormeurduvol/shop" target="_blank">Redbubble
                     (boutique)</a>
